added the ability to get and add a product
